Day Two changes. Maybe the model core data works?

--- a/MyDigitalCookbook/Resources/Info.plist
+++ b/MyDigitalCookbook/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSCameraUsageDescription</key>
-	<string>This cookbook app will use your camera to capture recipes</string>
+	<string>My Digital Cookbook will need to use your camera to scan in recipes</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
