Day 3 work. There are some bugs right now

--- a/MyDigitalCookbook/Resources/Info.plist
+++ b/MyDigitalCookbook/Resources/Info.plist
@@ -2,8 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>photo library access</string>
 	<key>NSCameraUsageDescription</key>
-	<string>My Digital Cookbook will need to use your camera to scan in recipes</string>
+	<string>camera access</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
